# Nicheflex

./: .env.example  .gitignore  AGENTS.md  NICHE-PROFILES-flex.md  NicheFlex-MVP-PRD-v1.md  PROJECT-STATUS-checklist.md  README-INTEGRATION.md  SPEC-generation-upgrade-flex.md  SPEC-step1-landing-leadmagnet.md  SPEC-step2-generation-core.md  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
claude-memory-compiler/: README.md  pyproject.toml
claude-memory-compiler/scripts/: compile_mimo.py  config.py  flush_mimo.py  lint.py  mimo-extract.py  mimo-workflow.py  mimo_backend.py  query.py  utils.py
pages/: app.vue  confirm.vue  dashboard.vue  index.vue  login.vue
scripts/: live-scan-test.ts  scan-youtube.mjs  test-harness.ts  tsconfig.json
server/api/: generate.post.ts  niches.get.ts  outliers.get.ts  scan.post.ts  subscribe.post.ts
server/plugins/: auth.ts
server/prompts/: flex.ts
server/utils/: aiProvider.ts  nicheProfiles.ts  planLimits.ts  retryGenerate.ts  runGeneration.ts  schema.sql  validateGeneration.ts  youtube.ts
services/ai-service/: .env.example  backends.py  main.py  prompts.py  pyproject.toml
supabase/: 07_subscribers.sql
types/: index.ts
wiki/: index.md  knowledge-compile-summary.md  log.md  overview.md
wiki/concepts/: ai-microservice.md  banned-phrase-validation.md  client-side-history-rls.md  contract-evolution.md  generation-ui.md  h3-v2-compatibility.md  heat-score.md  honeypot-anti-spam.md  incremental-verification.md  lead-magnet-subscribers.md  niche-profiles.md  per-niche-scanner-queries.md  (+12 more)
(+4 files in other folders)
