[project]
name = "nicheheat-ai-service"
version = "0.1.0"
description = "AI service for NicheHeat - Niche Breakdown & Script Skeleton generation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[tool.ruff]
line-length = 100
